--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "node": "^16.13.2"
+    "node": "^16.13.2",
+    "underscore": "^1.13.2"
   }
 }
