--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^1.29.1",
+    "axios": "^0.25.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
